2022-10-05T08:09:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3188237830
* notice: last 14d: unq all: 3 5622
* notice: prev accum: outdated-unq outdated-all / unq all: 1080 68176 / 1113 73839
* notice: next accum: outdated-unq outdated-all / unq all: 1080 68176 / 1113 73798
* notice: prev exec diff / last date diff / accum: unq all: +1 +138 -1 -179 / +1 +138 -0 -0 / 1 138
* notice: removed / changed dates: [] / [2022-09-21 2022-10-05]

2022-10-05T00:44:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3186471257
* notice: last 14d: unq all: 3 5663
* notice: prev accum: outdated-unq outdated-all / unq all: 1076 67768 / 1111 73369
* notice: next accum: outdated-unq outdated-all / unq all: 1080 68176 / 1113 73839
* notice: prev exec diff / last date diff / accum: unq all: +0 +145 -0 -17 / +1 +402 -0 -0 / 1 402
* notice: removed / changed dates: [2022-09-20] / [2022-09-21 2022-10-04]

2022-10-04T16:11:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3183704953
* notice: last 14d: unq all: 3 5601
* notice: prev accum: outdated-unq outdated-all / unq all: 1076 67768 / 1113 73397
* notice: next accum: outdated-unq outdated-all / unq all: 1076 67768 / 1111 73369
* notice: prev exec diff / last date diff / accum: unq all: +0 +120 -2 -148 / +1 +257 -0 -0 / 1 257
* notice: removed / changed dates: [] / [2022-09-20 2022-10-04]

2022-10-04T08:10:05Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3180465836
* notice: last 14d: unq all: 5 5629
* notice: prev accum: outdated-unq outdated-all / unq all: 1076 67768 / 1112 73435
* notice: next accum: outdated-unq outdated-all / unq all: 1076 67768 / 1113 73397
* notice: prev exec diff / last date diff / accum: unq all: +1 +137 -0 -175 / +1 +137 -0 -0 / 1 137
* notice: removed / changed dates: [] / [2022-09-20 2022-10-04]
