@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-05T08:09:28Z",
-  "count" : 211,
-  "count_minmax" : [ 135, 407 ],
-  "count_decinc" : [ -196, +407 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -1, +3 ]
+  "timestamp" : "2022-10-05T16:23:19Z",
+  "count" : 65,
+  "count_minmax" : [ 65, 407 ],
+  "count_decinc" : [ -342, +407 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -2, +3 ]
 }
