@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-05T08:09:28Z",
-  "count" : 138,
-  "count_minmax" : [ 138, 138 ],
-  "count_decinc" : [ -0, +138 ],
+  "timestamp" : "2022-10-05T16:23:19Z",
+  "count" : 256,
+  "count_minmax" : [ 138, 256 ],
+  "count_decinc" : [ -0, +256 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
