@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-10-05T08:09:28Z",
+  "timestamp" : "2022-10-05T16:23:19Z",
   "count_outdated" : 68176,
   "uniques_outdated" : 1080,
-  "count" : 73798,
-  "uniques" : 1113,
+  "count" : 73770,
+  "uniques" : 1112,
   "clones" : [
     {
       "timestamp": "2022-09-21T00:00:00Z",
-      "count": 211,
-      "count_minmax": [ 135, 407 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
+      "count": 65,
+      "count_minmax": [ 65, 407 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ]
     },
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-10-05T00:00:00Z",
-      "count": 138,
-      "count_minmax": [ 138, 138 ],
+      "count": 256,
+      "count_minmax": [ 138, 256 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
