@@ -1,11 +1,11 @@
 {
-  "count": 5622,
+  "count": 5594,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-09-21T00:00:00Z",
-      "count": 211,
-      "uniques": 2
+      "count": 65,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-10-05T00:00:00Z",
-      "count": 138,
+      "count": 256,
       "uniques": 1
     }
   ]
