@@ -1,3 +1,11 @@
+2022-10-05T16:23:19Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3191038230
+* notice: last 14d: unq all: 3 5594
+* notice: prev accum: outdated-unq outdated-all / unq all: 1080 68176 / 1113 73798
+* notice: next accum: outdated-unq outdated-all / unq all: 1080 68176 / 1112 73770
+* notice: prev exec diff / last date diff / accum: unq all: +0 +118 -1 -146 / +1 +256 -0 -0 / 1 256
+* notice: removed / changed dates: [] / [2022-09-21 2022-10-05]
+
 2022-10-05T08:09:28Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3188237830
 * notice: last 14d: unq all: 3 5622
